Fixed white gap that appears on some mobile devices *crosses fingers*

--- a/css/styles.css
+++ b/css/styles.css
@@ -11,11 +11,10 @@
     z-index: -1;
     bottom: 0;
     position: absolute;
-    /*height: 90vh;*/
+    height: inherit;
     background: url(../img/TheVillageMovieB&W.jpg) no-repeat center center scroll;
-    background-size: 180vh 100%;
-    background-position-x: -255px;
-    background-position-y: -65px;
+    background-size: 289%;
+    background-position-x: -156px;
     filter: blur(1px);
 }
 
@@ -43,55 +42,12 @@
     color: white;
 }
 
-/* The side navigation menu */
-.sidenav {
-    height: 100%; /* 100% Full-height */
-    width: 0; /* 0 width - change this with JavaScript */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Stay on top */
-    top: 0;
-    left: 0;
-    background-color: #111; /* Black*/
-    overflow-x: hidden; /* Disable horizontal scroll */
-    padding-top: 60px; /* Place content 60px from the top */
-    transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
-}
-
-/* The navigation menu links */
-.sidenav a {
-    padding: 8px 8px 8px 32px;
-    text-decoration: none;
-    font-size: 25px;
-    color: #818181;
-    display: block;
-    transition: 0.3s
-}
-
-/* When you mouse over the navigation links, change their color */
-.sidenav a:hover, .offcanvas a:focus{
-    color: #f1f1f1;
-}
-
-/* Position and style the close button (top right corner) */
-.sidenav .closebtn {
-    position: absolute;
-    top: 0;
-    right: 25px;
-    font-size: 36px;
-    margin-left: 50px;
-}
-
 /* Style page content - use this if you want to push the page content to the right when you open the side navigation */
-#main {
-    transition: margin-left .5s;
-    padding: 20px;
-}
+/*#main {*/
+    /*transition: margin-left .5s;*/
+    /*padding: 20px;*/
+/*}*/
 
-/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
-@media screen and (max-height: 450px) {
-    .sidenav {padding-top: 15px;}
-    .sidenav a {font-size: 18px;}
-}
 
 section {
     width: 100%;
